# praktika_mod_4

./: .gitignore  README.md
blur_plugin/: Cargo.toml
blur_plugin/src/: lib.rs
image_processor/: Cargo.toml
image_processor/src/: error.rs  lib.rs  main.rs  plugin.rs  plugin_loader.rs
mirror_plugin/: Cargo.toml
mirror_plugin/src/: lib.rs
params/: blur.txt  mirror.txt
