[package]
name = "image_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
image = { version = "0.25.10", default-features = false, features = ["png"] }
libloading = "0.9.0"
log = "0.4.29"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
